--- a/css/blog-post.css
+++ b/css/blog-post.css
@@ -68,17 +68,18 @@
   display: block;
 }
 
-.button-profile {
+
+/* ---------------- button ----------------------- */
+.btn-profile {
   font-family: inherit;
-  font-size: 16px;
   text-align: center;
   width: 100%;
-  height: 50px;
   cursor: pointer;
   border: none;
   outline: 0;
   display: inline-block;
-  padding: 6px;
+  padding: 8px;
+  margin: 8px;
   color: white;
   background-color: #05acfa;
 }
