--- a/css/general_tags.css
+++ b/css/general_tags.css
@@ -35,14 +35,13 @@ h5 {
 p {
   font-family: "Roboto", sans-serif;                
   font-style: normal;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 400;
-  text-align:justify;
-  margin: 5px;
+  text-align: justify;
+  margin: 10px;
   padding-right: 0px;
   padding-left: 0px;
-  color:#1d2a35;
-  
+  color:#1d2a35;  
 }
 
 a {
@@ -58,6 +57,15 @@ a {
 
 b {
   font-family: inherit;
+}
+
+em {
+  font-family: inherit;
+}
+
+blockquote {
+  font-family: sans-serif;
+  font-size: 12px;
 }
 
 /* class for display date */
