--- a/css/general_tags.css
+++ b/css/general_tags.css
@@ -64,8 +64,9 @@ em {
 }
 
 blockquote {
-  font-family: sans-serif;
+  font-family: 'Courier New', Courier, monospace;
   font-size: 12px;
+  cursor: pointer;
 }
 
 /* class for display date */
@@ -80,6 +81,18 @@ blockquote {
 }
 
 
+.txt-center {
+  text-align: center;
+}
+
+.img-cover {
+  display: block;
+  width: 100%; 
+  height: 250px;
+  max-width: 100%;
+  max-height:100%;
+
+}
 /* ---------------- figure ----------------------- */
 figure {
   padding: 2px;
